<resources>
    <string name="app_name">Loca App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_hav">Already have an account?</string>
    <string name="or_sign_up_with_social_account">Or sign up with social account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_login_with_social_account">Or login with social account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_long_text">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="fashion_sale">Fashion\nsale</string>
    <string name="new_text">New</string>
    <string name="summer_sales">SUMMER SALES</string>
    <string name="up_to_50_off">Up to 50% off</string>


</resources>